# subtitle_parser

./: Cargo.toml
src/: error.rs  file.rs  lib.rs  parser.rs  script_info.rs  styles.rs  value.rs
src/ass/: mod.rs  styles.rs
src/ass/events/: comment.rs  dialogue.rs  effect.rs  mod.rs  text.rs
src/events/: mod.rs
src/ssa/: file.rs  fonts.rs  mod.rs  script_info.rs  styles.rs
src/ssa/events/: comment.rs  dialogue.rs  mod.rs
ssa/: Cargo.toml
ssa/src/: error.rs  file.rs  fonts.rs  graphics.rs  lib.rs  parser.rs  script_info.rs  styles.rs  value.rs  version.rs
ssa/src/events/: effect.rs  mod.rs  text.rs
ssa_parser/: Cargo.toml  README.md
ssa_parser/src/: error.rs  graphics.rs  styles.rs  value.rs  version.rs
ssa_parser/src/events/: mod.rs
